syntax = "proto3";

package user.event.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

import "google/api/field_behavior.proto";

option go_package = "github.com/go-saas/kit/user/event/v1;v1";

message UserRoleChangeEvent{
  string user_id=1;
}